--- a/assests/style.css
+++ b/assests/style.css
@@ -46,7 +46,7 @@ body {
     height: 200px;
     width: 100%;
     margin-bottom: 100px;
-    background-size:auto;
+    background-size:100%;
     background-position: center;
   }
 
